fix config edit spilling over save button

--- a/static/edit/style.css
+++ b/static/edit/style.css
@@ -26,3 +26,8 @@
   background-color: var(--boxColor);
   display: none;
 }
+
+#mainContent {
+  height: 100%;
+  overflow: hidden;
+}
